--- a/rwitter/tweets/templates/tweets/feed.html
+++ b/rwitter/tweets/templates/tweets/feed.html
@@ -18,23 +18,23 @@
       </div>
       <!-- Story2 -->
       <div class="mx-1 bg-white rounded story" style="width: 6em; height: 190px">
-        <img src="https://source.unsplash.com/random/5" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
+        <img src="{{post.user.userprofile.photo.url}}" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
       </div>
       <!-- Story3 -->
       <div class="mx-1 bg-white rounded story" style="width: 6em; height: 190px">
-        <img src="https://source.unsplash.com/random/6" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
+        <img src="{{post.user.userprofile.photo.url}}" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
       </div>
       <!-- Story4 -->
       <div class="mx-1 bg-white rounded story" style="width: 6em; height: 190px">
-        <img src="https://source.unsplash.com/random/7" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
+        <img src="{{post.user.userprofile.photo.url}}" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
       </div>
       <!-- Story5 -->
       <div class="mx-1 bg-white rounded d-none d-lg-block story" style="width: 6em; height: 190px">
-        <img src="https://source.unsplash.com/random/8" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
+        <img src="{{post.user.userprofile.photo.url}}" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
       </div>
       <!-- Story6 -->
       <div class="mx-1 bg-white rounded d-none d-lg-block story" style="width: 6em; height: 190px">
-        <img src="https://source.unsplash.com/random/9" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
+        <img src="{{post.user.userprofile.photo.url}}" class="card-img-top object-fit-cover rounded-1" style="min-height: 190px" alt="story post" />
       </div>
       <!-- next icon -->
       <div class="position-absolute top-50 start-100 translate-middle d-none d-lg-block">
@@ -78,32 +78,32 @@
 
       <!-- slider mobile -->
       <div class="col-8 d-xl-none text-end">
-        <img src="https://source.unsplash.com/random/1" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-        <img src="https://source.unsplash.com/random/2" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-        <img src="https://source.unsplash.com/random/3" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-        <img src="https://source.unsplash.com/random/4" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+        <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+        <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+        <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+        <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
       </div>
       <!-- slider desktop -->
       <div class="col-8 d-none d-xl-block position-relative" style="max-width: 450px">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner text-center">
             <div class="carousel-item active">
-              <img src="https://source.unsplash.com/random/1" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/2" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/3" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/4" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/5" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/6" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/7" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
             </div>
             <div class="carousel-item">
-              <img src="https://source.unsplash.com/random/1" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/2" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/3" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/4" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/5" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/6" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-              <img src="https://source.unsplash.com/random/7" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+              <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
             </div>
           </div>
         </div>
