--- a/rwitter/tweets/templates/tweets/feed.html
+++ b/rwitter/tweets/templates/tweets/feed.html
@@ -162,7 +162,11 @@
                 <!-- comment collapse -->
                 <h2 class="accordion-header" id="headingTwo">
                   <div class="accordion-button collapsed pointer d-flex justify-content-end" data-bs-toggle="collapse" data-bs-target="#collapsePost1" aria-expanded="false" aria-controls="collapsePost1">
-                    <p class="m-0 d-none d-lg-block">2 Comments</p>
+                    {% if post.comment_count == 0 %}
+                      <p class="m-0 d-none d-lg-block">No comments yet</p>
+                    {% else %}
+                      <p class="m-0 d-none d-lg-block">{{post.comment_count}} Comments</p>
+                    {% endif %}
                   </div>
                 </h2>
                 <hr />
@@ -181,50 +185,48 @@
                 <div id="collapsePost1" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <hr />
                   <div class="accordion-body">
-                    <!-- comment 1 -->
-                    <div class="d-flex align-items-center my-1">
+                    
+                     <!-- create comment -->
+                     <form class="d-flex my-1" action="" method="POST">
+                      {% csrf_token %}
                       <!-- avatar -->
-                      <img src="https://source.unsplash.com/collection/happy-people" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+                      <div>
+                        <img src="{{user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+                      </div>
+                      {{comment_form|crispy}}
+                    </form>
+                    <!-- end -->
+
+                    <!-- comment 1 -->
+                    {% for comment in post.post_comments %}
+                    <div class="py-3 d-flex align-items-center">
+                      <!-- avatar -->
+                      <img src="{{comment.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
                       <!-- comment text -->
-                      <div class="p-3 rounded comment__input w-100">
+                      <div class="rounded comment__input w-100">
                         <!-- comment menu of author -->
                         <div class="d-flex justify-content-end">
+                          {% if user.is_authenticated and comment.user.username == user.username %}
                           <!-- icon -->
                           <i class="fas fa-ellipsis-h text-blue pointer" id="post1CommentMenuButton" data-bs-toggle="dropdown" aria-expanded="false"></i>
                           <!-- menu -->
                           <ul class="dropdown-menu border-0 shadow" aria-labelledby="post1CommentMenuButton">
                             <li class="d-flex align-items-center">
-                              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Edit Comment</a>
+                              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Update Comment</a>
                             </li>
                             <li class="d-flex align-items-center">
                               <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Delete Comment</a>
                             </li>
                           </ul>
+                          {% endif %}
                         </div>
-                        <p class="fw-bold m-0">John</p>
-                        <p class="m-0 fs-7 bg-gray p-2 rounded"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        
+                        <p class="fw-bold m-0">{{comment.user.first_name}} {{comment.user.last_name}}</p>
+                        <p class="m-0 fs-7 bg-gray rounded"> {{comment.content }} </p>
                       </div>
                     </div>
-                    <!-- comment 2 -->
-                    <div class="d-flex align-items-center my-1">
-                      <!-- avatar -->
-                      <img src="https://source.unsplash.com/random/2" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-                      <!-- comment text -->
-                      <div class="p-3 rounded comment__input w-100">
-                        <p class="fw-bold m-0">Jerry</p>
-                        <p class="m-0 fs-7 bg-gray p-2 rounded"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                      </div>
-                    </div>
-                    <!-- create comment -->
-                    <form class="d-flex my-1">
-                      <!-- avatar -->
-                      <div>
-                        <img src="https://source.unsplash.com/collection/happy-people" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-                      </div>
-                      <!-- input -->
-                      <input type="text" class="form-control border-0 rounded-pill bg-gray" placeholder="Write a comment" />
-                    </form>
-                    <!-- end -->
+                    {% endfor %}
+      
                   </div>
                 </div>
               </div>
